# Fiscal

./: .gitignore  CLAUDE.md  PROJECT_PLAN.md  README.md
apple/: README.md  (+1 more)
backend/: .env.example  .gitignore  README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260714_0001_p1_foundation.py  20260715_0002_accounts_categories.py  20260715_0003_unified_ledger.py  20260715_0004_credit_cycles.py  20260715_0005_installments.py  20260715_0006_reimbursements.py  20260716_0007_ai_proposals.py  20260716_0008_p9_input_sources.py  (+8 more)
backend/tests/: conftest.py  test_foundations.py  test_health.py  test_p10_api_postgres.py  test_p10_migration_postgres.py  test_p10_postgres.py  test_p11_api_postgres.py  test_p11_migration_postgres.py  test_p11_operations.py  test_p11_security.py  test_p12_legacy_migration.py  test_p12_manifest.py  test_p12_migration_orchestration.py  test_p12_migration_postgres.py  test_p12_provenance.py  test_p12_shadow_apply.py  test_p12_transform_reconciliation.py  test_p13_cash_flow_postgres.py  test_p13_recovery.py  test_p13_schemas.py  test_p17_credit_cash_flow.py  test_p17_migration_postgres.py  test_p17_postgres.py  test_p19_access_credential.py  test_p2_postgres.py  test_p3_postgres.py  test_p3_schemas.py  test_p4_api_postgres.py  test_p4_migration_postgres.py  test_p4_postgres.py  test_p5_api_postgres.py  test_p5_migration_postgres.py  test_p5_postgres.py  test_p6_api_postgres.py  test_p6_migration_postgres.py  test_p6_postgres.py  test_p7_api_postgres.py  test_p7_postgres.py  test_p7_schemas.py  test_p8_api_postgres.py  (+6 more)
(+267 files in other folders)
