[project]
name = "fiscal-api"
version = "0.1.0"
description = "Fiscal private finance API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.15,<2",
    "asyncpg>=0.30,<1",
    "fastapi>=0.115,<1",
    "httpx>=0.28,<1",
    "pydantic-settings>=2.8,<3",
    "sqlalchemy[asyncio]>=2.0.38,<3",
    "structlog>=25.1,<26",
    "uvicorn[standard]>=0.34,<1",
]

[dependency-groups]
dev = [
    "pyright>=1.1.396,<2",
    "pytest>=8.3,<9",
    "pytest-asyncio>=0.25,<1",
    "ruff>=0.11,<1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fiscal_api"]

[tool.pytest.ini_options]
addopts = "-ra --strict-config --strict-markers"
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC", "S", "RUF"]
ignore = ["S101"]

[tool.ruff.lint.per-file-ignores]
"alembic/versions/*.py" = ["E501"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"
include = ["src"]
exclude = [".venv", "alembic"]
reportMissingTypeStubs = false

[[tool.uv.index]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true
